# tcpserver

./: .gitignore  CMakeLists.txt  main.cpp
board/: QualityDefine.h  tagread.cpp  tagread.h
configuration/: configuration.cpp  configuration.h  usermanager.cpp  usermanager.h
loggersimulate/: CMakeLists.txt  config.json  main.cpp
loggersimulate/board/: DCTag.h  tagread.cpp
loggersimulate/configuration/: configuration.cpp  usermanager.cpp
loggersimulate/network/client/: controlclient.cpp  controlclient.h  ftpmanager.cpp  ftpmanager.h  logger.cpp  logger.h  realtimedata.h  tcpclient.cpp  tcpclient.h  tcpclientsock.cpp
loggersimulate/network/server/: tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
network/client/: ftpmanager.cpp  ftpmanager.h  logger.cpp  logger.h  realtimedata.cpp  realtimedata.h  tcpclient.cpp  tcpclient.h  tcpclientsock.cpp  tcpclientsock.h
network/server/: tcpclient.cpp  tcpclient.cpp.autosave  tcpclient.h  tcpserver.cpp  tcpserver.h
